# sankhya

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  codecov.yml  deny.toml
benches/: benchmarks.rs
docs/architecture/: overview.md
docs/architecture/adr/: 001-unit-fraction-algorithm.md  002-gmt-correlation-constant.md  003-canonical-precession-period.md  004-seven-sages-data-model.md  005-feature-gated-script-rendering.md
docs/development/: roadmap.md
examples/: babylonian.rs  basic.rs  chinese.rs  egyptian.rs  epoch.rs  greek.rs  islamic.rs  mayan.rs  roman.rs  vedic.rs
scripts/: bench-history.sh
src/: astro.rs  aztec.rs  babylonian.rs  chinese.rs  coptic.rs  egyptian.rs  epoch.rs  error.rs  greek.rs  gregorian.rs  hebrew.rs  islamic.rs  lib.rs  mayan.rs  persian.rs  roman.rs  vedic.rs
tests/: adversarial.rs  integration.rs
