[package]
name = "sankhya"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "GPL-3.0-only"
description = "sankhya — Ancient mathematical systems: Mayan, Babylonian, Egyptian, Vedic, Chinese, and Greek computational traditions"
homepage = "https://github.com/MacCracken/sankhya"
repository = "https://github.com/MacCracken/sankhya"
readme = "README.md"
documentation = "https://docs.rs/sankhya"
keywords = ["ancient-math", "calendar", "mayan", "babylonian", "vedic"]
categories = ["mathematics", "science"]
exclude = [".claude/", ".github/", "docs/", "scripts/"]

[dependencies]
hisab = { version = "1", default-features = false }
lipi = { version = "0.5", path = "../lipi", default-features = false, optional = true }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
lipi = { version = "0.5", path = "../lipi", default-features = false }
serde_json = "1"

[features]
default = []
lipi = ["dep:lipi"]
logging = ["dep:tracing-subscriber"]

[[bench]]
name = "benchmarks"
harness = false
