[package]
name = "sankhya"
version = "2.0.0"
edition = "2024"
rust-version = "1.89"
license = "GPL-3.0-only"
description = "sankhya — Ancient mathematical systems, historical calendars, and archaeoastronomy: 10+ calendar systems, 8 civilizations of mathematics, cross-civilizational epoch correlation"
homepage = "https://github.com/MacCracken/sankhya"
repository = "https://github.com/MacCracken/sankhya"
readme = "README.md"
documentation = "https://docs.rs/sankhya"
keywords = ["ancient-math", "calendar", "archaeoastronomy", "mayan", "babylonian"]
categories = ["mathematics", "science"]
exclude = [".claude/", ".github/", "docs/", "scripts/"]

[dependencies]
avatara = { version = "1", default-features = false, optional = true }
hisab = { version = "1", default-features = false }
itihas = { version = "1", default-features = false, optional = true }
varna = { version = "1", default-features = false, optional = true }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
varna = { version = "1", default-features = false }
serde_json = "1"

[features]
default = []
avatara = ["dep:avatara"]
itihas = ["dep:itihas"]
varna = ["dep:varna"]
logging = ["dep:tracing-subscriber"]

[[bench]]
name = "benchmarks"
harness = false
